# ml1-final-project

./: pyproject.toml
code/: obesity_analysis.ipynb
docs/: obesity_analysis.html
models/: best_overall_model.joblib
