[project]
name = "final-project"
version = "0.1.0"
description = "Obesity analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "mpl-tools>=0.4.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "ucimlrepo>=0.0.7",
]
